<resources>
    <string name="app_name">Mesa News</string>

    <string name="top_news">Top news</string>
    <string name="latest_news">Latest news</string>
    <string name="favorite">Mark as favorite</string>

    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>

    <string name="your_email">Your e-mail</string>
    <string name="your_password">Your password</string>
    <string name="your_name">Your name</string>
    <string name="choose_password">Choose a password</string>
    <string name="confirm_password">Confirm your password</string>

    <string name="menu_filter">Filter</string>
    <string name="filter_by">Filter news by: </string>
    <string name="nav_all">All</string>
    <string name="nav_favorites">Favorites</string>

    <string name="facebook_app_id">2902426843159773</string>
    <string name="fb_login_protocol_scheme">fb2902426843159773</string>
    <string name="or">or</string>
    <string name="your_birthday">Your birthday</string>

    <string-array name="filter_types">
        <item>Choose a filter</item>
        <item>Favorites</item>
        <item>Date</item>
    </string-array>
</resources>
